[gd_scene load_steps=5 format=3 uid="uid://b2kbxskgk187s"]

[ext_resource type="Script" path="res://interactable/interact_UI.gd" id="1_3kadr"]
[ext_resource type="PackedScene" uid="uid://d4jukjjk8qioe" path="res://areas/player_detection.tscn" id="2_88e03"]
[ext_resource type="FontFile" uid="uid://bujaeu8fqc4wc" path="res://assets/fonts/SIMPLE PLANNER.otf" id="2_ihka6"]
[ext_resource type="Texture2D" uid="uid://dnhxukvlpoduc" path="res://assets/ui/modals/NPC Talk.png" id="3_a5cui"]

[node name="InteractUI" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.45174, 0)
script = ExtResource("1_3kadr")
text_label = "Move"
type = "movable"

[node name="Label3D" type="Label3D" parent="."]
billboard = 1
text = "Hello"
font = ExtResource("2_ihka6")
font_size = 100
outline_size = 0

[node name="PlayerDetection" parent="." instance=ExtResource("2_88e03")]

[node name="CollisionShape3D" parent="PlayerDetection" index="0"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, -1.49656, 0)

[node name="TalkIcon" type="Sprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.0208353, 1.32825, 0)
visible = false
texture = ExtResource("3_a5cui")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]

[editable path="PlayerDetection"]
